--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         td{
             padding: 8px;
         }
+        textarea{
+          resize: none;
+        }
     </style>
   </head>
   <body bgcolor="green">
